<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <!-- ホーム画面（診断記録一覧） -->
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.rokusodo.healthcheckup.MainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_main_to_camera"
            app:destination="@id/cameraFragment" />

        <action
            android:id="@+id/action_main_to_record_detail"
            app:destination="@id/recordDetailFragment" />

        <action
            android:id="@+id/action_main_to_item_master"
            app:destination="@id/itemMasterFragment" />

        <action
            android:id="@+id/action_main_to_abnormal_list"
            app:destination="@id/abnormalListFragment" />
    </fragment>

    <!-- 撮影画面 -->
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.rokusodo.healthcheckup.CameraFragment"
        android:label="撮影"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_camera_to_ocr_result"
            app:destination="@id/ocrResultFragment" />
    </fragment>

    <!-- OCR確認・補正画面 -->
    <fragment
        android:id="@+id/ocrResultFragment"
        android:name="com.rokusodo.healthcheckup.OcrResultFragment"
        android:label="@string/title_ocr_result"
        tools:layout="@layout/fragment_ocr_result">

        <!-- OCRテキスト（エラープレフィクスを含む場合あり）をCameraFragmentから受け取る -->
        <argument
            android:name="ocrText"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!-- 診断記録詳細画面 -->
    <fragment
        android:id="@+id/recordDetailFragment"
        android:name="com.rokusodo.healthcheckup.ui.detail.RecordDetailFragment"
        android:label="@string/title_record_detail"
        tools:layout="@layout/fragment_record_detail">

        <argument
            android:name="recordId"
            app:argType="long" />

        <action
            android:id="@+id/action_record_detail_to_trend_graph"
            app:destination="@id/trendGraphFragment" />
    </fragment>

    <!-- 項目マスター管理画面 -->
    <fragment
        android:id="@+id/itemMasterFragment"
        android:name="com.rokusodo.healthcheckup.ui.master.ItemMasterFragment"
        android:label="@string/title_item_master"
        tools:layout="@layout/fragment_item_master" />

    <!-- 経年グラフ画面 -->
    <fragment
        android:id="@+id/trendGraphFragment"
        android:name="com.rokusodo.healthcheckup.ui.graph.TrendGraphFragment"
        android:label="@string/title_trend_graph"
        tools:layout="@layout/fragment_trend_graph">
        <argument android:name="itemName" app:argType="string" />
    </fragment>

    <!-- 基準値外一覧画面 -->
    <fragment
        android:id="@+id/abnormalListFragment"
        android:name="com.rokusodo.healthcheckup.ui.notification.AbnormalListFragment"
        android:label="@string/title_abnormal_list"
        tools:layout="@layout/fragment_abnormal_list" />

</navigation>
